--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <title>Rollup Template</title>
+    <title>Rollup Template</title>
 
-        <link rel="stylesheet" href="./css/bundle.min.css" />
-    </head>
-    <body>
-        <script src="./js/bundle.min.js"></script>
-    </body>
+    <link rel="stylesheet" href="./css/bundle.min.css" />
+  </head>
+  <body>
+    <script src="./js/main.min.js"></script>
+  </body>
 </html>
